[tool.poetry]
name = "dask-gateway-eks"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
kubernetes_asyncio = "^18.20.0"
boto3 = "*"
boto3-stubs = {extras = ["iam"], version = "*"}
uvicorn = {extras = ["standard"], version = "^0.15.0"}
dask-gateway = "^0.9.0"
cryptography = "^35.0.0"
backoff = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-black = "^0.3.12"
bokeh = "^2.4.1"
ipython = "^7.28.0"
pre-commit = "^2.15.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
